--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           India's&nbsp;&nbsp; Most&nbsp;&nbsp;Trusted&nbsp;&nbsp;Online
           &nbsp;&nbsp;consultation
         </h1>
-        <h2 class="s">SolveRX</h2>
+        <h2 class="s">SolvRX</h2>
         <hr />
         <h3>
           Introducing SolvRX, your premier destination for convenient online
@@ -96,7 +96,7 @@
       </div>
     </div>
     <footer>
-      <p>SolveRX</p>
+      <p>SolvRX</p>
 
       <p>&copy; 2024 SolvRX. All rights reserved.</p>
       <p>Created By &nbsp;&nbsp;Adhish Biju &nbsp; Ankit kumar  &nbsp; Tej Ambare &nbsp; Arman Sha
